--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 annotated-types==0.5.0
 anyio==3.7.1
 bcrypt==4.0.1
-email-validator==2.1.0.post1
+email-validator==2.1.0
 fastapi==0.104.1
 Jinja2==3.1.2
 passlib==1.7.4
@@ -18,4 +18,4 @@ PyYAML==6.0.1
 SQLAlchemy==2.0.23
 starlette==0.27.0
 typing_extensions==4.8.0
-uvicorn==0.24.0.post1
+uvicorn==0.24.0
