--- a/requirements.txt
+++ b/requirements.txt
@@ -3,19 +3,19 @@ annotated-types==0.5.0
 anyio==3.7.1
 bcrypt==4.0.1
 email-validator==2.1.0
-fastapi==0.104.1
-Jinja2==3.1.2
-passlib==1.7.4
-psycopg2==2.9.9
-pydantic==2.5.1
-pydantic-extra-types==2.1.0
-pydantic-settings==2.1.0
-pydantic_core==2.14.3
+fastapi==0.103.0
+Jinja2
+passlib
+psycopg2
+pydantic==2.4.0
+pydantic-extra-types
+pydantic-settings==2.0.0
+pydantic_core
 python-dotenv==1.0.0
-python-jose==3.3.0
-python-multipart==0.0.6
-PyYAML==6.0.1
-SQLAlchemy==2.0.23
-starlette==0.27.0
-typing_extensions==4.8.0
-uvicorn==0.24.0
+python-jose
+python-multipart
+PyYAML
+SQLAlchemy==2.0.1
+starlette
+typing_extensions
+uvicorn==0.20.0
