--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,11 @@ pydantic==2.4.0
 pydantic-extra-types
 pydantic-settings==2.0.0
 pydantic_core
-python-dotenv==1.0.0
+python-dotenv
 python-jose
 python-multipart
 PyYAML
-SQLAlchemy==2.0.1
+SQLAlchemy
 starlette
 typing_extensions
 uvicorn==0.20.0
